--- a/app/src/main/res/layout/activity_upgrade_premium.xml
+++ b/app/src/main/res/layout/activity_upgrade_premium.xml
@@ -48,6 +48,7 @@
                 android:gravity="center_horizontal">
 
                 <ImageView
+                    android:id="@+id/upgradeToPremiumLogo"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="?attr/logoDrawable"
