--- a/app/src/main/res/layout/fragment_all_bank_interest_rate.xml
+++ b/app/src/main/res/layout/fragment_all_bank_interest_rate.xml
@@ -155,6 +155,7 @@
             android:background="@drawable/curve_box"
             android:padding="16dp"
             android:elevation="4dp"
+            android:layout_marginBottom="20dp"
             android:visibility="gone">
 
             <!-- Calculation Summary Heading -->
