--- a/app/src/main/res/layout/dialog_privacy_policy.xml
+++ b/app/src/main/res/layout/dialog_privacy_policy.xml
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Privacy Policy for Animal Sounds"
+                android:text="Privacy Policy for Financial Pro Calculator"
                 style="@style/textColor"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -50,7 +50,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Effective Date: August 01, 2024"
+                android:text="Effective Date: May 05, 2025"
                 android:textSize="14.5dp"
                 android:paddingBottom="8dp" />
 
@@ -66,7 +66,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome to the 'Animal Sounds' app! Your privacy is important to us. This Privacy Policy outlines how we handle your information and what steps we take to protect it."
+                android:text="Welcome to the 'Financial Pro Calculator' app! Your privacy is important to us. This Privacy Policy outlines how we handle your information and what steps we take to protect it."
                 android:textSize="14.5dp"
                 android:paddingBottom="8dp" />
 
@@ -82,7 +82,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="We do not collect any personal information from users of our app. The 'Animal Sounds' app does not gather, store, or process any personal data."
+                android:text="We do not collect any personal information from users of our app. The 'Financial Pro Calculator' app does not gather, store, or process any personal data."
                 android:textSize="14.5dp"
                 android:paddingBottom="8dp" />
 
@@ -98,7 +98,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="The 'Animal Sounds' app does not require any permissions beyond the standard ones necessary to run the app. We do not access your device's camera, microphone, location, or other sensitive information."
+                android:text="The 'Financial Pro Calculator' app does not require any permissions beyond the standard ones necessary to run the app. We do not access your device's camera, microphone, location, or other sensitive information."
                 android:textSize="14.5dp"
                 android:paddingBottom="8dp" />
 
@@ -146,7 +146,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="The 'Animal Sounds' app may contain links to third-party websites or services. We are not responsible for the privacy practices or content of these third parties. We encourage you to review the privacy policies of any third-party sites you visit."
+                android:text="The 'Financial Pro Calculator' app may contain links to third-party websites or services. We are not responsible for the privacy practices or content of these third parties. We encourage you to review the privacy policies of any third-party sites you visit."
                 android:textSize="14.5dp"
                 android:paddingBottom="8dp" />
 
@@ -185,7 +185,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="mobmasterofficial@gmail.com"
+                android:text="@string/email"
                 android:textSize="14.5dp"
                 android:paddingBottom="16dp" />
 
@@ -201,7 +201,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="By using the 'Animal Sounds' app, you consent to the terms outlined in this Privacy Policy."
+                android:text="By using the 'Financial Pro Calculator' app, you consent to the terms outlined in this Privacy Policy."
                 android:textSize="14.5dp"
                 android:paddingBottom="5dp"/>
 
