--- a/app/src/main/res/layout/dialog_language.xml
+++ b/app/src/main/res/layout/dialog_language.xml
@@ -63,15 +63,15 @@
                     android:padding="10dp"
                     android:textSize="14.5dp"/>
 
-                <RadioButton
-                    android:id="@+id/radio_hindi"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/regular"
-                    android:text="@string/lang_hindi"
-                    android:padding="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:textSize="14.5dp"/>
+<!--                <RadioButton-->
+<!--                    android:id="@+id/radio_hindi"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="@font/regular"-->
+<!--                    android:text="@string/lang_hindi"-->
+<!--                    android:padding="10dp"-->
+<!--                    android:layout_marginBottom="10dp"-->
+<!--                    android:textSize="14.5dp"/>-->
 
             </RadioGroup>
         </LinearLayout>
