--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:background="?attr/colorPrimaryDark"
-            android:theme="@style/Base.Theme.MathOperation"
+            android:theme="@style/Base.Theme.FinancePro"
             app:titleTextColor="?attr/colorPrimaryFixed" />
 
         <!-- TabLayout -->
