--- a/app/src/main/res/layout/activity_upgrade_premium.xml
+++ b/app/src/main/res/layout/activity_upgrade_premium.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Base.Theme.MathOperation"
+    android:theme="@style/Base.Theme.FinancePro"
     tools:context=".UpgradeToPremiumActivity">
 
     <!-- Toolbar -->
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="?attr/colorPrimaryDark"
-        android:theme="@style/Base.Theme.MathOperation"
+        android:theme="@style/Base.Theme.FinancePro"
         app:titleTextColor="?attr/colorPrimaryFixed" />
 
     <!-- Ad Banner at Bottom -->
