--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme -->
-    <style name="Base.Theme.MathOperation" parent="Theme.Material3.Dark">
+    <style name="Base.Theme.FinancePro" parent="Theme.Material3.Dark">
         <!-- Make sure the app uses a fullscreen layout -->
 
         <item name="windowNoTitle">true</item>
