--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme -->
-    <style name="Base.Theme.MathOperation" parent="Theme.Material3.Light">
+    <style name="Base.Theme.FinancePro" parent="Theme.Material3.Light">
         <!-- Make sure the app uses a fullscreen layout -->
 
         <item name="windowActionBar">false</item>
