--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,61 +1,68 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_drawer_layout"
-    android:background="?attr/colorPrimaryDark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimaryDark"
     tools:context=".SplashActivity">
 
-    <TextView
-        android:id="@+id/appNameSplash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bold"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="150dp"/>
-
-    <!-- slogan -->
-    <TextView
-        android:id="@+id/sloganSplash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/slogan_text"
-        style="@style/textColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appNameSplash" />
-
+    <!-- Logo (Centered) -->
     <ImageView
         android:id="@+id/SplashLogo"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="?attr/logoDrawable"
         android:background="@drawable/rounded_corners"
         android:clipToOutline="true"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="?attr/logoDrawable"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Developed By Section -->
+    <!-- App Name (Below Logo) -->
+    <TextView
+        android:id="@+id/appNameSplash"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/bold"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/SplashLogo" /> <!-- Linked to logo -->
+
+    <!-- Slogan (Below App Name) -->
+    <TextView
+        android:id="@+id/sloganSplash"
+        style="@style/textColor"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/slogan_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appNameSplash" /> <!-- Linked to app name -->
+
+    <!-- Developed By Section (Bottom) -->
     <LinearLayout
         android:id="@+id/developedby"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginBottom="16dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -63,22 +70,22 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/selectedTextColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
-                style="@style/selectedTextColor"
                 android:layout_gravity="center"
+                android:fontFamily="@font/regular"
                 android:text="@string/developedby"
-                android:fontFamily="@font/regular" />
+                android:textSize="12sp" />
 
             <TextView
+                style="@style/textColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/regular"
                 android:layout_gravity="center"
+                android:fontFamily="@font/regular"
                 android:text="@string/DeveloperName"
-                android:textSize="13sp"
-                style="@style/textColor"/>
+                android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
 
