--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -65,7 +65,7 @@
                     <Spinner
                         android:id="@+id/simpleLoanCalculateDropdown"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
                         android:layout_weight="1"
                         android:fontFamily="@font/bold"
@@ -168,13 +168,13 @@
                     <Button
                         android:id="@+id/findInterestRate"
                         style="@style/ButtonStyle1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="38dp"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:background="@drawable/curve_box"
                         android:fontFamily="@font/regular"
                         android:text="SEARCH INTEREST %"
-                        android:textSize="15sp" />
+                        android:textSize="13sp" />
                 </LinearLayout>
 
                 <TextView
