--- a/app/src/main/res/layout/activity_ad_helper.xml
+++ b/app/src/main/res/layout/activity_ad_helper.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bottom_ad_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
     android:layout_alignParentBottom="true"
-    android:layout_gravity="bottom"
-    ads:adSize="SMART_BANNER"
-    ads:adUnitId="@string/admob_banner_ad_unit"/>
+    android:layout_gravity="bottom" />
