--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -457,9 +457,9 @@
         </LinearLayout>
     </ScrollView>
 
-    <include
-        layout="@layout/activity_ad_helper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
+<!--    <include-->
+<!--        layout="@layout/activity_ad_helper"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom" />-->
 </LinearLayout>
