--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="?attr/colorPrimaryDark"
+                android:theme="@style/Base.Theme.FinancePro"
                 app:titleTextColor="?attr/colorPrimaryFixed"/>
 
             <com.google.android.material.tabs.TabLayout
@@ -37,7 +38,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingBottom="50dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
