--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -326,7 +326,6 @@
                         android:fontFamily="@font/regular"
                         android:text="@string/btnclear"
                         android:textSize="15sp" />
-
                 </LinearLayout>
             </LinearLayout>
 
@@ -451,6 +450,48 @@
                     android:text=""
                     android:textSize="25sp"
                     android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/SaveAndDocsBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/curve_box"
+                android:elevation="4dp"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/button_saveCalculation"
+                        style="@style/ButtonStyle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="38dp"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/curve_box"
+                        android:fontFamily="@font/regular"
+                        android:text="@string/btnsavecalculation"
+                        android:textSize="15sp" />
+
+                    <Button
+                        android:id="@+id/button_shareCalculation"
+                        style="@style/ButtonStyle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="38dp"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/curve_box"
+                        android:fontFamily="@font/regular"
+                        android:text="@string/btnsharecalculation"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
